Prepare easysafe base

--- a/EasySafe.vcxproj
+++ b/EasySafe.vcxproj
@@ -42,13 +42,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>ClangCL</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>ClangCL</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -117,7 +117,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\PC\source\repos\EasySafe\EasySafe;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\PC\source\repos\EasySafe\EasySafe\EasySafe;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,7 +133,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\PC\source\repos\EasySafe\EasySafe;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\PC\source\repos\EasySafe\EasySafe\EasySafe;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,15 +144,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EasySafe.cpp" />
+    <ClCompile Include="EasySafe\EasySafe.hpp" />
+    <ClCompile Include="utility\inline_syscall\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EasySafe.h" />
-    <ClInclude Include="utility\inline_syscall\inline_syscall.hpp" />
-    <ClInclude Include="utility\inline_syscall\in_memory_init.hpp" />
+    <ClInclude Include="EasySafe\config.h" />
+    <ClInclude Include="EasySafe\EasySafe.h" />
+    <ClInclude Include="EasySafe\utility\inline_syscall\inline_syscall.hpp" />
+    <ClInclude Include="EasySafe\utility\inline_syscall\in_memory_init.hpp" />
+    <ClInclude Include="EasySafe\tests.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="utility\inline_syscall\inline_syscall.inl" />
+    <None Include="EasySafe\utility\inline_syscall\inline_syscall.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
