--- a/EasySafe.vcxproj.filters
+++ b/EasySafe.vcxproj.filters
@@ -15,24 +15,33 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="EasySafe.cpp">
-      <Filter>Kaynak Dosyalar</Filter>
-    </ClCompile>
+    <ClInclude Include="EasySafe\utility\inline_syscall\in_memory_init.hpp">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="EasySafe\utility\inline_syscall\inline_syscall.hpp">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="EasySafe\config.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="EasySafe\tests.hpp">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="EasySafe\EasySafe.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EasySafe.h">
-      <Filter>Üst Bilgi Dosyaları</Filter>
-    </ClInclude>
-    <ClInclude Include="utility\inline_syscall\in_memory_init.hpp">
-      <Filter>Üst Bilgi Dosyaları</Filter>
-    </ClInclude>
-    <ClInclude Include="utility\inline_syscall\inline_syscall.hpp">
-      <Filter>Üst Bilgi Dosyaları</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="utility\inline_syscall\inline_syscall.inl">
+    <None Include="EasySafe\utility\inline_syscall\inline_syscall.inl">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="utility\inline_syscall\Main.cpp">
+      <Filter>Kaynak Dosyalar</Filter>
+    </ClCompile>
+    <ClCompile Include="EasySafe\EasySafe.hpp">
+      <Filter>Kaynak Dosyalar</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
