--- a/EasySafe.vcxproj.filters
+++ b/EasySafe.vcxproj.filters
@@ -46,7 +46,7 @@
     <ClCompile Include="EasySafe\EasySafe.cpp">
       <Filter>Kaynak Dosyalar</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Example.cpp">
       <Filter>Kaynak Dosyalar</Filter>
     </ClCompile>
   </ItemGroup>
