--- a/EasySafe.vcxproj.filters
+++ b/EasySafe.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="EasySafe\src\tests.hpp">
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
+    <ClInclude Include="EasySafe\utility\no_access_protection\protect.h">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
+    <ClInclude Include="EasySafe\utility\no_access_protection\protect.hpp">
+      <Filter>Üst Bilgi Dosyaları</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="EasySafe\utility\inline_syscall\inline_syscall.inl">
